--- a/core/templates/chat/base.html
+++ b/core/templates/chat/base.html
@@ -27,10 +27,12 @@
             </div>
 
             <nav class="space-y-3">
-                <a href="{% url 'lista_sessoes' %}" class="block hover:bg-blue-700 px-3 py-2 rounded">📂 Sessões</a>
-                <a href="{% url 'listar_contextos' %}" class="block hover:bg-blue-700 px-3 py-2 rounded">📚 Contextos</a>
-                <a href="{% url 'parametro_list' %}" class="block hover:bg-blue-700 px-3 py-2 rounded">⚙️ Parâmetros</a>
-                <a href="#" class="block hover:bg-blue-700 px-3 py-2 rounded">👥 Consultores</a>
+                <a href="{% url 'lista_sessoes' %}" class="block hover:bg-blue-700 px-3 py-2 rounded">Sessões</a>
+                <a href="{% url 'listar_contextos' %}" class="block hover:bg-blue-700 px-3 py-2 rounded">Contextos</a>
+                <a href="{% url 'listar_consultor' %}" class="block hover:bg-blue-700 px-3 py-2 rounded">Consultores</a>
+                <a href="{% url 'parametro_list' %}" class="block hover:bg-blue-700 px-3 py-2 rounded">Leads</a>
+                <a href="{% url 'parametro_list' %}" class="block hover:bg-blue-700 px-3 py-2 rounded">Agenda</a>
+                <a href="{% url 'parametro_list' %}" class="block hover:bg-blue-700 px-3 py-2 rounded">Parâmetros</a>
             </nav>
         </aside>
 
