--- a/core/templates/consultor/listar.html
+++ b/core/templates/consultor/listar.html
@@ -4,7 +4,7 @@
 <div class="max-w-4xl mx-auto p-6 bg-white shadow rounded">
     <div class="flex justify-between mb-4">
         <h2 class="text-2xl font-bold">Consultores</h2>
-        <a href="{% url 'adicionar_parametro' %}" class="bg-blue-600 text-white px-4 py-2 rounded">Adicionar</a>
+        <a href="{% url 'adicionar_consultor' %}" class="bg-blue-600 text-white px-4 py-2 rounded">Adicionar</a>
     </div>
     <table class="w-full table-auto">
         <thead class="bg-gray-100">
@@ -17,7 +17,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for c in Consultores %}
+            {% for c in consultor %}
             <tr class="border-t">
                 <td class="px-4 py-2 font-mono">{{ c.consultorNome }}</td>
                 <td class="px-4 py-2">{{c.consultorEmail }}</td>
@@ -27,8 +27,8 @@
                         {{ c.consultorAtivo|yesno:'Ativo,Inativo' }}
                     </span>
                 <td class="px-4 py-2 space-x-2">
-                    <a href="{% url 'alterar_parametro' p.pk %}" class="text-blue-600 hover:underline">Editar</a>
-                    <a href="{% url 'excluir_parametro' p.pk %}" class="text-red-600 hover:underline">Excluir</a>
+                    <a href="{% url 'alterar_parametro' c.pk %}" class="text-blue-600 hover:underline">Editar</a>
+                    <a href="{% url 'excluir_parametro' c.pk %}" class="text-red-600 hover:underline">Excluir</a>
                 </td>
             </tr>
             {% empty %}
