--- a/core/templates/consultor/form.html
+++ b/core/templates/consultor/form.html
@@ -8,7 +8,7 @@
         {{ form.as_p }}
         <div>
             <button type="submit" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded">Salvar</button>
-            <a href="{% url 'listar_leads' %}" class="ml-4 text-gray-600 hover:text-gray-800">Cancelar</a>
+            <a href="{% url 'listar_consultor' %}" class="ml-4 text-gray-600 hover:text-gray-800">Cancelar</a>
         </div>
     </form>
 </div>
